# python_dev

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  versions.json
.devcontainer/: devcontainer.json
.docker/: .p10k.zsh  start.sh
.github/: dependabot.yml  renovate.json
.github/workflows/: build.yml  buildLatest.yml  linter.yml  pre-commit-autoupdate.yml  test.yml  update.yml
build_versions/: ci_matrix.py  constants.py  dockerfiles.py  main.py  update.py  versions.py
src/python_dev/: __init__.py  ci_matrix.py  cli.py  constants.py  dockerfiles.py  logger.py  update.py  versions.py
templates/: debian.Dockerfile
tests/: test_ci_matrix.py  test_dockerfiles.py  test_update.py
