[project]
name = "python-dev"
version = "0.1.0"
requires-python = ">=3.9,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "jinja2==3.1.6",
]

[dependency-groups]
dev = [
  "mypy==1.18.2",
  "pre-commit==4.3.0",
  "ruff==0.13.3",
]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
lint.select = [ "ALL" ]
lint.ignore = [
  "D",      # FIXME: docs
  "DTZ003", # Allow naive datetimes
  "FBT001", # Allow boolean function args
  "FBT002", # Allow boolean traps
  "G004",   # Allow using f-strings when logging
  "T201",   # This is a cli
]

[tool.pyproject-fmt]
keep_full_version = true

[tool.mypy]
strict = true
disallow_any_unimported = true
no_implicit_optional = true
