[project]
name = "python-dev"
version = "0.1.0"
requires-python = "~=3.14.6"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "httpx==0.28.1",
  "jinja2==3.1.6",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
pdev = "python_dev:pdev"

[dependency-groups]
dev = [
  "mypy==2.1.0",
  "pre-commit==4.6.0",
  "pytest==9.0.3",
  "pytest-mock==3.15.1",
  "ruff==0.15.17",
]

[tool.ruff]
target-version = "py314"
line-length = 120
indent-width = 4
lint.select = [ "ALL" ]
lint.ignore = [
  "D",      # FIXME: docs
  "DTZ003", # Allow naive datetimes
  "FBT001", # Allow boolean function args
  "FBT002", # Allow boolean traps
  "G004",   # Allow using f-strings when logging
  "T201",   # This is a cli
]

[tool.ruff.lint.per-file-ignores]
"**/test*.py" = ["S101", "PLR2004"]

[tool.pyproject-fmt]
keep_full_version = true

[tool.mypy]
strict = true
disallow_any_unimported = true
no_implicit_optional = true
